# LightPROF

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: freebase_triples.tsv  webqsp.jsonl
docs/: overview.md
lightprof/: adapter.py  reasoning.py  retrieval.py  train.py  utils.py
notebooks/: demo.ipynb
scripts/: convert_kg.py
tests/: test_adapter.py  test_reasoning.py  test_retrieval.py  test_train.py  test_utils.py
