[project]
name = "graphpromptor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "jupyter>=1.1.1",
    "networkx>=3.4.2",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
